fix: improve responsive design. Improve legibility of code blocks

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
   --color-nav-decorator: #dfdfdf;
   --color-border: #dfdfdf;
   --color-background: #fff;
-  --color-pre-background: #ffdcf0;
+  --color-pre-background: #fae1ff;
   --color-code-background: #dfdfdf;
   --color-input-border: #ccc;
   --color-input-background: #fafafa;
@@ -112,7 +112,7 @@ header.playground .logo {
 header.playground .navlogo-title {
   position: relative;
   bottom: -2px;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 @media screen and (min-width: 620px) {
@@ -235,7 +235,7 @@ footer.bottom:hover {
 }
 
 .home-blog-list {
-  text-align: right;
+  text-align: left;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -259,8 +259,18 @@ footer.bottom:hover {
 
 .home-blog-list a date {
   color: var(--color-text-light);
-  display: inline-block;
-  width: 100px;
+  display: block;
+}
+
+@media screen and (min-width: 560px) {
+  .home-blog-list {
+    text-align: right;
+  }
+
+  .home-blog-list a date {
+    display: inline-block;
+    width: 100px;
+  }
 }
 
 .home-blog-list a:hover {
@@ -406,8 +416,14 @@ footer.bottom:hover {
 
 /* quotes */
 blockquote {
-  margin: 3rem;
+  margin: 2rem;
   font-style: italic;
+}
+
+@media screen and (min-width: 560px) {
+  blockquote {
+    margin: 3rem;
+  }
 }
 
 /* Code */
@@ -419,7 +435,7 @@ textarea {
 code {
   display: inline-block;
   font-size: 1rem;
-  padding: .1rem .3rem;
+  padding: 0.1rem 0.3rem;
   background: var(--color-code-background);
   border-radius: 5px;
   position: relative;
@@ -428,7 +444,7 @@ code {
 
 pre {
   background-color: var(--color-pre-background);
-  padding: .5rem .75rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 2px;
 }
 
@@ -437,4 +453,10 @@ pre code {
   background: transparent;
   padding: 0;
   position: static;
+  white-space: normal;
+}
+
+/* Utilities */
+.break-all {
+  word-break: break-word;
 }
