--- a/static/css/playgrounds/csp-script-hash.css
+++ b/static/css/playgrounds/csp-script-hash.css
@@ -1,7 +1,7 @@
 .playground-title {
   font-size: 2rem;
   text-align: center;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .playground-desc {
@@ -18,14 +18,28 @@ textarea {
   background: var(--color-input-background);
   border-radius: 5px;
   width: 100%;
-  height: 280px;
+  height: 150px;
   padding: 1rem;
   resize: vertical;
 }
 
-.playground-output {
-  display: flex;
-  gap: 3rem;
+select {
+  width: 100%;
+}
+
+@media screen and (min-width: 560px) {
+  textarea {
+    height: 280px;
+  }
+
+  select {
+    width: auto;
+  }
+
+  .playground-output {
+    display: flex;
+    gap: 3rem;
+  }
 }
 
 .playground-output div:last-child {
@@ -41,6 +55,7 @@ output {
   border-radius: 5px;
   display: block;
   width: 100%;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   min-height: 40px;
+  word-break: break-all;
 }
